<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EpicBudget</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_fail">Your passwords did not match</string>
    <string name="failed_login">Wrong password or username</string>

    <string-array name="currencies"></string-array>
    <string-array name="expense_types">
        <item>Food</item>
        <item>Clothes</item>
        <item>Beer</item>
    </string-array>
    <string-array name="income_types">
        <item>Salary</item>
        <item>Gift</item>
        <item>Lottery</item>
    </string-array>

    <string name="title_activity_overview">Overview</string>
    <string name="select_a_month">Select a month</string>
    <string name="add">Add</string>
    <string name="title_activity_add">Add entry</string>
    <string name="expense_radio_button">Expense</string>
    <string name="income_radio_button">Income</string>
    <string name="action_add_entry">Add a new entry</string>
    <string name="action_save_entry">Save entry</string>
    <string name="amount_text">Amount</string>
    <string name="description_edittext">Description</string>
    <string name="select_date">Date</string>
    <string name="budget_action_text">Budgets</string>
    <string name="title_activity_budget">Budgets</string>
    <string name="hello_world">Hello world!</string>

</resources>