<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/username_field"
        style="@style/Field"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_field"
        style="@style/Field"
        android:drawableLeft="@drawable/ic_secure"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/login_button"
        style="@style/Button"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/register_button"
        style="@style/Button"
        android:onClick="register"
        android:text="@string/register" />

</LinearLayout>