<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_secure"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <EditText
            android:id="@+id/repeat_password_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_secure"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" >
        </EditText>

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/register_button"
            style="@style/Button"
            android:onClick="register"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>